# Rainb0w-Lite

./: README.md  main.py  pyproject.toml  run.sh
Docker/: rainb0w_config.toml
Docker/sing-box/: docker-compose.yml
Docker/sing-box/etc/: config.json
src/: configurator.py
src/base/: config.py
src/proxy/: dns.py  hysteria.py  reality.py  warp.py
src/shell/: deploy.sh  uninstall.sh  update.sh
src/shell/access_control/: setup_firewall.sh
src/shell/base/: config.sh
src/shell/cronjobs/: xt_geoip_update.sh
src/shell/cryptography/: gen_warp_key.sh  gen_x25519_keys.sh  gen_x509_cert.sh
src/shell/docker/: docker_utils.sh  restart_all_containers.sh
src/shell/helper/: get_cert_info.py  get_hysteria_uri.py  get_reality_uri.py
src/shell/os/: check_reboot_required.sh  enable_kernel_logrotate.sh  install_docker.sh  install_xt_geoip.sh  os_utils.sh  rebuild_xt_geoip_db.sh  upgrade_os.sh
src/shell/performance/: disable_zram.sh  enable_zram.sh  revert_kernel_net.sh  tune_kernel_net.sh
src/user/: user_manager.py
src/utils/: cert_utils.py
