[project]
name = "rainb0w-lite"
version = "0.1.0"
description = "Rainb0w Lite is a lightweight terminal-based installer and configuration manager for the sing-box proxy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "pick>=2.4.0",
    "psutil>=7.1.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "toml>=0.10.2",
]
